# parede-de-texto

./: .gitignore  404.html  README.md  index.html  pyproject.toml
AWS/practitioner/: index.html
parede_de_texto/: mkdocs.yml
parede_de_texto/docs/AWS/: practitioner.md
