[tool.poetry]
name = "parede-de-texto"
version = "0.1.0"
description = "."
authors = ["Bruno Barcellos <bbarcellosf@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.2.3"
pymdown-extensions = "^9.2"
mkdocs-material = "^8.1.11"
mkdocs-markmap = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
